Add a simple logo

--- a/site/_includes/components/navigation.njk
+++ b/site/_includes/components/navigation.njk
@@ -9,6 +9,7 @@
 </div>
 
 <nav class="navigation" id="navigation-menu" tabindex="-1" aria-label="{{ translations.nav_menu_label }}">
+    <img class="navigation__logo" alt="processwire.dev" src="/assets/processwire-dev.svg">
     <a href="#content" class="skip-to-content sr-only-focusable">{{ translations.main_content_link }}</a>
     {% for section in collections.postTree %}
         <section class="navigation__section">
