Some small fixes, start work on the performance article

--- a/site/_includes/components/navigation.njk
+++ b/site/_includes/components/navigation.njk
@@ -1,5 +1,5 @@
 <div class="header">
-    <button class="header__burger hamburger hamburger--arrow" type="button" id="navigation-button"
+    <button class="header__burger hamburger hamburger--squeeze" type="button" id="navigation-button"
         aria-controls="navigation-menu" aria-haspopup="true" aria-expanded="false">
         <span class="sr-only" id="navigation-label">{{ translations.nav_button_label }}</span>
         <span class="hamburger-box" aria-hidden="true">
