Add twitter:card meta tag

--- a/site/_includes/components/seo.njk
+++ b/site/_includes/components/seo.njk
@@ -1,3 +1,4 @@
+{# canonical URLs / links #}
 <link rel="canonical" href="{{ site.url + page.url }}">
 <meta property="og:url" content="{{ site.url + page.url }}">
 
@@ -16,3 +17,5 @@
 {% endif %}
 
 <meta name="generator" content="Eleventy (11ty.dev)">
+
+<meta name="twitter:card" content="summary_large_image">
