Update post footer with a discuss URL, site footer and some small fixes

--- a/site/_includes/_layouts/post.njk
+++ b/site/_includes/_layouts/post.njk
@@ -1,7 +1,9 @@
 ---
 layout: html
 permalink: "{{ page.fileSlug | stripVersionPrefix }}/index.html"
+discuss_url: false
 ---
+
 {{ content | safe }}
 
 {% include "components/post-footer.njk" %}
