--- a/site/_includes/components/footer.njk
+++ b/site/_includes/components/footer.njk
@@ -1,10 +1,10 @@
-Created by Moritz L'Hoest
-<span class="footer__seperator" aria-hidden="true">|</span>
+<a href="https://moritzlost.de">{{ translations.footer_credits }}</a>
+<span class="footer__separator" aria-hidden="true">|</span>
 <a href="{{ pkg.repository.url }}" class="footer__link">
     {%- fontawesome "github", "brands", ["footer__icon"] -%}
     {{- translations.footer_github_link -}}
 </a>
-<span class="footer__seperator" aria-hidden="true">|</span>
+<span class="footer__separator" aria-hidden="true">|</span>
 <a href="/imprint" class="footer__link">
     {{- translations.footer_imprint_link -}}
 </a>
