--- a/src/_sass/_blocks.scss
+++ b/src/_sass/_blocks.scss
@@ -7,11 +7,31 @@
     }
 }
 
+.article-notices {
+    @include font-size($font-size-xs);
+}
+
+.article-links {
+    &__link {
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    &__icon {
+        height: 1.5rem;
+        margin-right: .5rem;
+        path {
+            fill: currentColor;
+        }
+    }
+}
+
 .post-footer {
     margin-top: 5rem;
-    border-top: 1px solid $gray-300;
     padding-top: 1rem;
-    @include stack(1rem);
+    border-top: 1px solid $gray-500;
+    @include stack(2rem);
 }
 
 .back-to-top {
@@ -27,6 +47,9 @@
         &:hover, &:focus {
             transform: scale(1.3);
             transition: transform 250ms ease-out;
+        }
+        path {
+            fill: map-get($theme-colors, "red");
         }
     }
 }
