--- a/src/_sass/_footer.scss
+++ b/src/_sass/_footer.scss
@@ -10,7 +10,7 @@
             }
         }
     }
-    &__seperator {
+    &__separator {
         margin-left: 1rem;
         margin-right: 1rem;
     }
