Add favicon, print styles, proof-read some articles, etc

--- a/src/_sass/_blocks.scss
+++ b/src/_sass/_blocks.scss
@@ -49,7 +49,7 @@
             transition: transform 250ms ease-out;
         }
         path {
-            fill: map-get($theme-colors, "red");
+            fill: $primary;
         }
     }
 }
