--- a/src/_sass/_variables.scss
+++ b/src/_sass/_variables.scss
@@ -12,6 +12,8 @@ $gray-800: #333333;
 $gray-900: #212529;
 $black: #000000;
 
+$primary: #E64A3C;
+
 $colors-nature: (
     "blue": #7EC6F2,
     "green": #83A603,
