--- a/src/_sass/_variables.scss
+++ b/src/_sass/_variables.scss
@@ -2,7 +2,7 @@
 
 $white: #ffffff;
 $gray-100: #fcf9f5;
-$gray-200: #e9ecef;
+$gray-200: #e1e1e1;
 $gray-300: #dee2e6;
 $gray-400: #ced4da;
 $gray-500: #adb5bd;
@@ -92,7 +92,10 @@ $stack-default-margin: 1rem;
 
 // main sections
 
-$body-bg: $gray-100;
+// $body-bg: #91241A;
+// $body-bg: $gray-100;
+$body-bg: $gray-200;
+// $body-bg: rgba(179, 39, 31, 0.15);
 $body-color: $black;
 
 $article-bg: $white;
