Change footer background

--- a/src/_sass/_variables.scss
+++ b/src/_sass/_variables.scss
@@ -106,7 +106,7 @@ $article-color: inherit;
 $navigation-bg: $gray-800;
 $navigation-color: $white;
 
-$footer-bg: $gray-400;
+$footer-bg: $white;
 $footer-color: inherit;
 
 // responsive breakpoints
