Add legal notice and privacy policy in English and German

--- a/site/_includes/components/footer.njk
+++ b/site/_includes/components/footer.njk
@@ -5,6 +5,6 @@
     {{- translations.footer_github_link -}}
 </a>
 <span class="footer__separator" aria-hidden="true">|</span>
-<a href="/imprint" class="footer__link">
+<a href="/legal" class="footer__link">
     {{- translations.footer_imprint_link -}}
 </a>
