Add links to the official discussion thread

--- a/site/_includes/_layouts/homepage.njk
+++ b/site/_includes/_layouts/homepage.njk
@@ -1,7 +1,7 @@
 ---
 layout: html
 permalink: /
-discuss_url: false
+discuss_url: "https://processwire.com/talk/topic/24641-processwiredev-%E2%80%94-tutorials-for-web-development-with-processwire/"
 ---
 
 {{ content | safe }}
