--- a/site/_includes/components/navigation.njk
+++ b/site/_includes/components/navigation.njk
@@ -25,7 +25,7 @@
                         {% set isCurrentPage = post.url === page.url %}
                         <li class="navigation__item">
                             <a href="{{ '#content' if isCurrentPage else post.url }}" class="navigation__link"
-                                {{ 'aria-current="page"' if isCurrentPage }}>
+                                {{ 'aria-current="page"'|safe if isCurrentPage }}>
                                 {{- post.data.menu_title or post.data.title or post.url -}}
                             </a>
                             {% if post.url === page.url %}
