Update build process and dependencies

--- a/site/_includes/components/post-footer.njk
+++ b/site/_includes/components/post-footer.njk
@@ -34,7 +34,7 @@
     </nav>
     <p class="back-to-top">
         <a href="#content" class="back-to-top__link" title="{{ translations.back_to_top }}" aria-label="{{ translations.back_to_top }}">
-            {% fontawesome "chevron-circle-up", "solid", ['back-to-top__icon'], translations.back_to_top %}
+            {% fontawesome "circle-chevron-up", "solid", ['back-to-top__icon'], translations.back_to_top %}
         </a>
     </p>
 </aside>
